# grue

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.claude/skills/grue-code/: SKILL.md
.claude/skills/publish-grue/: SKILL.md
.github/workflows/: build.yml
docs/: schema.md  ui-spec.md
docs/legacy-specs/: defaults.md  format.md  interaction.md  link.md  map.md  node.md
packaging/arch/: PKGBUILD
packaging/linux/: README.txt  grue.desktop  install.sh  uninstall.sh
public/test-maps/: file-map.vue
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: geometry.ts  history.ts  log.ts  model.ts  vueFormat.ts
src/ui/: actions.ts  contextmenu.ts  dialogs.ts  docs.ts  editor.ts  help.ts  measure.ts  menu.ts  menubar.ts  palette.ts  panel.ts  panels.ts  platform.ts  preferences.ts  prefs.ts  print.ts  shortcuts.ts
